--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <titl>My top ten 5 videogames</title>
+        <title>My top ten 5 videogames</title>
     </head>
     <body>
     <style>
