--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>My top 10 videogames</h1>
     <style>
-    body {background-color: rgb(138, 7, 7);   } 
+    body {background-color: rgb(white);   } 
     p{color: rgb(0, 0, 0);   }
     
     img {
