--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 }
 
     h2 {
-    text-align: left;
+    text-align: center;
 }
 
     h3 {
-    text-align: right;
+    text-align: center;
 }   
         
     </style>
