--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         
     </head>
     <body>
-        <h1>My guns</h1>
+        <h1>Airsoft</h1>
+        <h2>My guns</2>
      
         <P>The guns I use are an ASG Armalite M15 by classic army and an ASG M9 with co2 magazines.<br> My Armalite M15 has a prety decent range and a prertty fast fire rate. the build quality of the exterior is very high as it has a full metal higher and lower receiver and a metal handgaurd. This gun also comes with railgaurds and a stubby foregrip in the box. The stubby foregrip is comefortable for me but may be uncomfortable for people with larger hands. The internals arwe not the best but are pretty decent for a sport line gun considering the the fact that I can out range many people on the field. This is due to the hop up in the classic army gun. The sights on this gun are also some of the nicer sights. They are very easy to use and there is a very clean sight picture. These sights paired with the classic army hop up, makes for a fairly accurate gun.  The only problem i have had with it is that some of the metal externals tend to rust in the damp irish weather. Overall, it is a durable gun with decent internals that is well worth the €250 price point.</p>
     <style>
